--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node main.ts",
-    "dev": "ts-node-dev main.ts"
+    "dev": "ts-node-dev main.ts",
+    "database": "psql -f ./psql/setup.sql"
   },
   "repository": {
     "type": "git",
