--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "ts-node main.ts",
     "dev": "ts-node-dev main.ts",
-    "database": "psql -f ./psql/testingsetup.sql"
+    "database": "psql -f ./psql/testingsetup.sql",
+    "bill_data": "psql -f ./psql/setup.sql && psql -f ./psql/bill_seed.sql"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   "dependencies": {
     "@types/formidable": "^3.4.5",
     "@types/node": "^20.12.7",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
@@ -32,6 +34,7 @@
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/pg": "^8.11.5"
