--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-session": "^1.18.0",
     "formidable": "^3.5.1",
     "pg": "^8.11.5",
+    "sweetalert2": "^11.10.8",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
