--- a/package.json
+++ b/package.json
@@ -24,16 +24,19 @@
     "@types/formidable": "^3.4.5",
     "@types/node": "^20.12.7",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "formidable": "^3.5.1",
     "pg": "^8.11.5",
+    "socket.io": "^4.7.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
