--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@types/node": "^20.12.7",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "cross-fetch": "^4.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "formidable": "^3.5.1",
+    "grant": "^5.4.22",
     "pg": "^8.11.5",
     "socket.io": "^4.7.5",
     "sweetalert2": "^11.10.8",
