--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express-session": "^1.18.0",
     "formidable": "^3.5.1",
     "grant": "^5.4.22",
+    "perfect-scrollbar": "^1.5.5",
     "pg": "^8.11.5",
     "socket.io": "^4.7.5",
     "ts-node": "^10.9.2",
