--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "start": "ts-node main.ts",
     "dev": "ts-node-dev main.ts",
-    "database": "psql -f ./psql/testingSetup.sql",
-    "seed": "psql -f ./psql/seed.sql",
-    "bill_data": "psql -f ./psql/testingSetup.sql && psql -f ./psql/billSeed.sql"
+    "data": "psql -f ./psql/setup.sql",
+    "seed": "psql -f ./psql/seed.sql"
   },
   "repository": {
     "type": "git",
